Fixed alignment issues with the 'About Us' section

--- a/pages/products/style/style.scss
+++ b/pages/products/style/style.scss
@@ -75,6 +75,10 @@ body {
 	}
 }
 
+.about-us {
+	padding-left: 0;
+}
+
 @media screen and (width: 1366px) {
 	.product {
 		a {
@@ -82,6 +86,10 @@ body {
 				height: 40vh;
 			}
 		}
+	}
+
+	.about-us{
+		padding-left: 4rem;
 	}
 }
 
