--- a/style/style.scss
+++ b/style/style.scss
@@ -60,10 +60,6 @@ nav {
 	color: $white;
 }
 
-.about-us {
-	padding-left: 0;
-}
-
 .we-recommend {
 	h6 {
 			color: $green;
@@ -88,12 +84,6 @@ nav {
 	.footer-logo {
 		font-family: 'Open Sans Condensed', sans-serif;
 		color: white;
-	}
-}
-
-@media screen and (max-width: 1366px) {
-	.about-us{
-		padding-left: 4rem;
 	}
 }
 
